--- a/MyNuget/MyNuget.csproj
+++ b/MyNuget/MyNuget.csproj
@@ -1,7 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>NuGet to demonstrate debugging code inside the NuGet</Description>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
