--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,4 +29,4 @@ steps:
   inputs:
     command: 'pack'
     projects: '**/MyNuget.csproj'
-    arguments: '--no-build --configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration)'
