--- a/MyNuget/MyNuget.csproj
+++ b/MyNuget/MyNuget.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Description>NuGet to demonstrate debugging code inside the NuGet</Description>
-    <Version>1.0.2</Version>
+    <Description>First version to release in Azure DevOps</Description>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
 </Project>
