--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,26 +7,21 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'Ubuntu-16.04'
+
+variables:
+  buildConfiguration: 'Release'
+  dotnetSdkVersion: '3.1.100'
+  project: '**/MyNuget.csproj'
 
 steps:
+- task: UseDotNet@2
+  displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
+  inputs:
+    version: '$(dotnetSdkVersion)'
+
 - task: DotNetCoreCLI@2
-  displayName: 'dotnet restore'
+  displayName: 'Restore project dependencies'
   inputs:
     command: 'restore'
-    projects: '**/MyNuget.csproj'
-    feedsToUse: 'select'
-
-- task: DotNetCoreCLI@2
-  displayName: 'donet build'
-  inputs:
-    command: 'build'
-    projects: '**/MyNuget.csproj'
-    arguments: '--no-restore --configuration $(buildConfiguration)'
-
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet pack'
-  inputs:
-    command: 'pack'
-    projects: '**/MyNuget.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    projects: $(project)
