pack with hard coded csproj
For unknow reason 'dotnet pack' also build MyNugetConsumer.csproj and trying to fix it.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
   displayName: 'Pack the project - $(buildConfiguration)'
   inputs:
     command: 'pack'
-    projects: $(project)
+    projects: '**/MyNuget.csproj'
     arguments: '--no-build --configuration $(buildConfiguration)'
     versioningScheme: byPrereleaseNumber
     majorVersion: '1'
