--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,10 +40,7 @@ steps:
     packagesToPack: '**/*.csproj'
     includesymbols: true
     includesource: true
-    versioningScheme: 'byPrereleaseNumber'
-    majorVersion: '1'
-    minorVersion: '0'
-    patchVersion: '0'
+    versioningScheme: 'byBuildNumber'
 
 - task: DotNetCoreCLI@2
   displayName: 'Push NuGet'
