--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,10 @@ steps:
     packagesToPack: '**/*.csproj'
     includesymbols: true
     includesource: true
-    versioningScheme: 'byBuildNumber'
+    versioningScheme: 'byPrereleaseNumber'
+    majorVersion: '1'
+    minorVersion: '0'
+    patchVersion: '1'
 
 - task: DotNetCoreCLI@2
   displayName: 'Push NuGet'
